- 
    
Bug
 - 
    Resolution: Fixed
 - 
    
  Not Evaluated                     
     - 
    Qt Creator 17.0.0
 - 
    None
 
- 
        4af4b98f5 (17.0)
 
struct Foo { int f1; int f2; int f3; }; struct Bar { Foo b1; int b2; int b3; int b4; int b5; }; Bar b = {{1, 2, 3}, /* cursor here */ 4, 5, 6};
Press Ctrl-Space where the cursor is positioned. The highlighted entry should be b2, but it's b4.

- relates to
 - 
                    
QTCREATORBUG-26346 Active parameter in function hint marked only for first signature
-         
     - Closed
 
 -         
 
| For Gerrit Dashboard: QTCREATORBUG-33009 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 648759,2 | CppEditor: Extend hack for finding out the active argument | 17.0 | qt-creator/qt-creator | Status: MERGED | +2 | +1 |