CppEditor: Extend hack for finding out the active argument

... when showing a function hint.

Fixes: QTCREATORBUG-33009
Change-Id: Id7fa701c1098d2b76cc9f5577d62bc56dacf3cae
Reviewed-by: David Schulz <david.schulz@qt.io>